Add jest and config for TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@models/*": ["./src/models/*"],
       "@config/*": ["./src/config/*"]
     }
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
