--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.3",
     "prettier": "^2.5.1",
