fix import alias

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,12 +72,10 @@
         "alphabetize": { "order": "asc", "ignoreCase": true }
       }
     ]
-  }
-  // "settings": {
-  //   "import/resolver": {
-  //     "typescript": {
-  //       "directory": "packages/server/*/tsconfig.json"
-  //     }
-  //   }
-  // }
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
+  },
 }
