--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2017",                                  
-    "lib": ["es6"],                                        
-    "experimentalDecorators": true,                   
-    "emitDecoratorMetadata": true, 
-    "module": "commonjs",                                
+    "target": "es2017",
+    "lib": ["es6"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "module": "commonjs",
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types"
-    ],                                  
+    ],
     "resolveJsonModule": true,
     "allowJs": true,
-    "outFile": "./dist",                                  
-    "outDir": "./src",                                   
+    "outDir": "./dist",
+    "rootDir": "./src",
     "removeComments": true,
-    "esModuleInterop": true,                             
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "baseUrl": ".",
